The following changes have been made between John 1.8.0 and 1.8.0.4:

* 3x interleaving for bcrypt on x86-64, except in AVX-enabled builds.
Provides significant speedup on Core 2 CPUs.
* Recognize the $2b$ bcrypt prefix.
* Added linux-arm32le and linux-arm32le-neon make targets (the latter makes use
of NEON for bitslice DES).
* Fixed a bug where unaligned access SSE/AVX instructions would unnecessarily
be generated by GCC 4.6+ in the bitslice DES code in non-OpenMP builds.
* Fixed a bug where "Warning: no OpenMP support for this hash type" could be
printed in "--stdout" mode.

The following changes have been made between John 1.7.9.8 and 1.8.0:

* Revised the incremental mode to let the current character counts grow for
each character position independently, with the aim to improve efficiency in
terms of successful guesses per candidate passwords tested.
* Revised the pre-defined incremental modes, as well as external mode filters
that are used to generate .chr files.
* Added makechr, a script to (re-)generate .chr files.
* Enhanced the status reporting to include four distinct speed metrics (g/s,
p/s, c/s, and C/s).
* Added the "--fork=N" and "--node=MIN[-MAX]/TOTAL" options for trivial
parallel and distributed processing.
* In the external mode compiler, treat character literals as unsigned.
* Renamed many of the formats.
* Updated the documentation.
* Relaxed the license for many source files to cut-down BSD.
* Relaxed the license for John the Ripper as a whole from GPLv2 (exact version)
to GPLv2 or newer with optional OpenSSL and unRAR exceptions.
* Assorted other changes have been made.

The following changes have been made between John 1.7.9 and 1.7.9.8:

* Enhanced the support for DES-based tripcodes by making use of the bitslice
DES implementation and supporting OpenMP parallelization.
* Implemented bitmaps for fast initial comparison of computed hashes against
those loaded for cracking.  This is applied before hash table lookups, and it